boreal/tests/assets/invalid_files/parsing/str_to_hex_int2.yar
rule a {
    strings:
        $a = /\xGR/
    condition:
        $a
}
